--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "prisma:generate": "dotenv -e .env -- npx prisma generate",
+    "prisma:push": "dotenv -e .env -- npx prisma db push",
+    "prisma:studio": "dotenv -e .env -- npx prisma studio"
   },
   "dependencies": {
     "dotenv": "^17.2.3",
@@ -19,6 +22,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "dotenv-cli": "^11.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
     "prisma": "^6.19.0",
