--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "prisma:studio": "dotenv -e .env -- npx prisma studio"
   },
   "dependencies": {
+    "@prisma/adapter-pg": "^7.0.0",
     "dotenv": "^17.2.3",
     "next": "16.0.1",
+    "pg": "^8.16.3",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/pg": "^8.15.6",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "dotenv-cli": "^11.0.0",
