--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@prisma/adapter-pg": "^7.0.0",
+    "@prisma/client": "7.0.0",
     "dotenv": "^17.2.3",
     "next": "16.0.1",
     "pg": "^8.16.3",
@@ -28,7 +29,7 @@
     "dotenv-cli": "^11.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
-    "prisma": "^6.19.0",
+    "prisma": "7.0.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
