Verified IaC works as expected

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   postgres:
     image: postgres:18-bookworm
@@ -13,7 +11,7 @@ services:
       APP_DB: ${ATLAS_DB_NAME}
       APP_PASSWORD: ${ATLAS_PASSWORD}
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql
       # This is the magic part:
       - ./db-init:/docker-entrypoint-initdb.d
     ports:
