Began first test

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "tailwindcss": "^4",
     "tsx": "^4.21.0",
     "typescript": "^5",
+    "vite-tsconfig-paths": "^6.0.3",
     "vitest": "^4.0.16",
     "vitest-mock-extended": "^3.1.0"
   }
