Updated more packages

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@tiptap/react": "^3.13.0",
     "@tiptap/starter-kit": "^3.13.0",
     "dotenv": "^17.2.3",
-    "next": "16.0.1",
+    "next": "^16.1.0",
     "pg": "^8.16.3",
     "react": "19.2.0",
     "react-dom": "19.2.0"
@@ -36,7 +36,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
     "jsdom": "^27.3.0",
-    "prisma": "7.0.0",
+    "prisma": "^7.2.0",
     "tailwindcss": "^4",
     "tsx": "^4.21.0",
     "typescript": "^5",
