--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint-config-next": "16.0.1",
     "jsdom": "^27.3.0",
     "prisma": "^7.2.0",
+    "shadcn": "^3.7.0",
     "tailwindcss": "^4",
     "tsx": "^4.21.0",
     "tw-animate-css": "^1.4.0",
