--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@prisma/client": "7.0.0",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.4",
     "@tiptap/react": "^3.13.0",
     "@tiptap/starter-kit": "^3.13.0",
