--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "prisma:seed": "dotenv -e .env -- npx prisma db seed",
     "prisma:file-search-setup": "dotenv -e .env -- npx prisma migrate dev --create-only --name add_hybrid_search",
     "prisma:project-semantic-vector-migration-setup": "dotenv -e .env -- npx prisma migrate dev --create-only --name project-semantic-vector-migration-setup",
+    "prisma:auth-migration": "dotenv -e .env -- npx prisma migrate dev --name add_auth_tables",
+    "auth-setup":"dotenv -e .env -- npx auth secret",
     "prisma:db-reset": "dotenv -e .env -- npx prisma migrate reset",
     "prisma:migrate": "dotenv -e .env -- npx prisma migrate dev",
     "test": "npx vitest"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.11.1",
     "@prisma/adapter-pg": "^7.0.0",
     "@prisma/client": "^7.3.0",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -32,6 +35,7 @@
     "dotenv": "^17.2.3",
     "lucide-react": "^0.563.0",
     "next": "^16.1.0",
+    "next-auth": "^5.0.0-beta.30",
     "pg": "^8.16.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
