--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,5 +26,23 @@ services:
     ports:
       - "5050:80"
 
+  atlas-web:
+    build: 
+      context: .
+      dockerfile: Dockerfile
+    container_name: atlas-web
+    restart: always
+    ports:
+      - "3000:3000"
+    environment:
+      - DATABASE_URL=${DATABASE_URL_DOCKER}
+      - AUTH_SECRET=${AUTH_SECRET}
+      - AUTH_GITHUB_ID=${AUTH_GITHUB_ID}
+      - AUTH_GITHUB_SECRET=${AUTH_GITHUB_SECRET}
+      - AUTH_TRUST_HOST=true
+      - AUTH_URL=http://localhost:3000
+    depends_on:
+      - postgres
+
 volumes:
   postgres_data:
