--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,18 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+    # ### NEW STEP ###
+      # This creates the specialized builder instance that supports caching
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to the Container registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
       # 2. Log in to GitHub Container Registry (GHCR)
       # We use ${{ secrets.GITHUB_TOKEN }}, which GitHub provides automatically.
       # You do NOT need to set this up manually.
