--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "prisma:file-search-setup": "dotenv -e .env -- npx prisma migrate dev --create-only --name add_hybrid_search",
     "prisma:project-semantic-vector-migration-setup": "dotenv -e .env -- npx prisma migrate dev --create-only --name project-semantic-vector-migration-setup",
     "prisma:auth-migration": "dotenv -e .env -- npx prisma migrate dev --name add_auth_tables",
-    "auth-setup":"dotenv -e .env -- npx auth secret",
+    "auth-setup": "dotenv -e .env -- npx auth secret",
     "prisma:db-reset": "dotenv -e .env -- npx prisma migrate reset",
     "prisma:migrate": "dotenv -e .env -- npx prisma migrate dev",
     "prisma:migrate-add-fields": "dotenv -e .env -- npx prisma migrate dev --name add_project_fields",
@@ -35,6 +35,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "lucide-react": "^0.563.0",
+    "minio": "^8.0.6",
     "next": "^16.1.0",
     "next-auth": "^5.0.0-beta.30",
     "pg": "^8.16.3",
