--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "next": "^16.1.0",
     "next-auth": "^5.0.0-beta.30",
     "pg": "^8.16.3",
+    "radix-ui": "^1.4.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-dropzone": "^15.0.0",
     "tailwind-merge": "^3.4.0",
     "use-debounce": "^10.0.6",
     "uuid": "^13.0.0"
