--- a/package.json
+++ b/package.json
@@ -34,16 +34,20 @@
     "@types/uuid": "^10.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "dotenv": "^17.2.3",
     "lucide-react": "^0.563.0",
     "minio": "^8.0.6",
     "next": "^16.1.0",
     "next-auth": "^5.0.0-beta.30",
+    "next-themes": "^0.4.6",
     "pg": "^8.16.3",
     "radix-ui": "^1.4.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-dropzone": "^15.0.0",
+    "react-resizable-panels": "^4.6.4",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "use-debounce": "^10.0.6",
     "uuid": "^13.0.0"
