--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,40 @@ services:
     ports:
       - "5050:80"
 
+  minio:
+    image: minio/minio:latest
+    container_name: local-minio
+    # MinIO deprecated the old ACCESS_KEY vars for the server itself, 
+    # so we map your requested variables to the new ROOT vars here.
+    environment:
+      MINIO_ROOT_USER: ${MINIO_ACCESS_KEY}
+      MINIO_ROOT_PASSWORD: ${MINIO_SECRET_KEY}
+    ports:
+      - "${MINIO_PORT}:9000" # API Port mapped to your variable
+      - "9001:9001"          # Web UI Console Port
+    command: server /data --console-address ":9001"
+    volumes:
+      - minio_data:/data
+    restart: unless-stopped
+
+  # Helper service to automatically create the bucket on startup
+  minio-init:
+    image: minio/mc:latest
+    container_name: local-minio-init
+    depends_on:
+      - minio
+    entrypoint: >
+      /bin/sh -c "
+      echo 'Connecting to MinIO...';
+      sleep 3; 
+      /usr/bin/mc alias set myminio http://minio:9000 ${MINIO_ACCESS_KEY} ${MINIO_SECRET_KEY};
+      echo 'Creating bucket...';
+      /usr/bin/mc mb myminio/${MINIO_BUCKET_NAME} --ignore-existing;
+      echo 'Setting public policy...';
+      /usr/bin/mc anonymous set public myminio/${MINIO_BUCKET_NAME};
+      exit 0;
+      "
+
   atlas-web:
     build: 
       context: .
@@ -34,6 +68,8 @@ services:
     restart: always
     ports:
       - "3000:3000"
+    profiles:
+      - full-docker-run
     environment:
       - DATABASE_URL=${DATABASE_URL_DOCKER}
       - AUTH_SECRET=${AUTH_SECRET}
@@ -46,3 +82,4 @@ services:
 
 volumes:
   postgres_data:
+  minio_data:
